# LinkEmbed

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  _check_ascii.py  ecosystem.config.js  vcpkg.json
.github/workflows/: pr_ci.yml
cmake/: FindDPP.cmake
config/: Config.cpp  Config.hpp  config.json
crates/linkembed-core/: Cargo.toml
crates/linkembed-core/src/: cache.rs  engine.rs  fetch.rs  lib.rs  metadata.rs  rate_limiter.rs  url_util.rs
scripts/: build-rpi-aarch64.ps1  build-rpi-aarch64.sh  build_debug.sh  build_release.sh  check_linux_env.sh  deploy-rpi-aarch64.ps1  deploy-rpi-aarch64.sh  pm2_restart.sh  pm2_start.sh  remote-rpi-postdeploy.sh  remove_vcpkg_linux.sh
src/: app.rs  config.rs  fetch.rs  lib.rs  logger.rs  main.cpp  main.rs  metadata.rs  url_util.rs
src/app/: embed_renderer.rs  mod.rs  reply_tracker.rs  scheduler.rs
src/cache/: MetadataCache.cpp  MetadataCache.hpp
src/core/: JobScheduler.cpp  JobScheduler.hpp  LinkEmbedHandler.cpp  LinkEmbedHandler.hpp
src/interfaces/: IHTMLFetcher.hpp  IMetadataCache.hpp  IMetadataParser.hpp  IRateLimiter.hpp
src/network/: HTMLFetcher.cpp  HTMLFetcher.hpp
src/parser/: DefaultMetadataParser.cpp  DefaultMetadataParser.hpp  MetadataParser.cpp  MetadataParser.hpp
src/utils/: EmbedBuilder.cpp  EmbedBuilder.hpp  Logger.cpp  Logger.hpp  RateLimiter.cpp  RateLimiter.hpp  ThreadPool.cpp  ThreadPool.hpp  UrlUtil.cpp  UrlUtil.hpp
tests/: CMakeLists.txt  test_core_utils.cpp  test_url_embed.cpp  test_url_resolve.cpp
