[package]
name = "linkembed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "gzip", "http2", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tl = "0.7.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
