[workspace]
members = [".", "crates/linkembed-core"]
default-members = ["."]
resolver = "2"

[package]
name = "linkembed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
linkembed-core = { path = "crates/linkembed-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
time = { version = "=0.3.36", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
