[package]
name = "linkembed-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
html-escape = "0.2.13"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "gzip", "http2", "rustls-tls", "stream"] }
tl = "0.7.8"

[dev-dependencies]
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
